[project]
name = 'asdf_time_schemas'
description = 'ASDF schemas for time'
readme = 'README.md'
requires-python = '>=3.8'
license = { file = 'LICENSE' }
authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Development Status :: 5 - Production/Stable',
]
dependencies = [
    'asdf-standard >= 1.0.1',
    'asdf-unit-schemas >= 0.1.0',
    'importlib_resources >= 3; python_version<"3.9"',
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    'tomli',
    'sphinx',
    'sphinx-asdf >= 0.1.3',
    'sphinx-astropy',
    'astropy >= 5.0.4',
    'graphviz',
    'matplotlib',
    'docutils',
    'sphinx-rtd-theme',
]
test = [
    'asdf >= 2.8.0',
    'asdf-astropy',
    'scipy',
    'pytest',
]

[project.urls]
'tracker' = 'https://github.com/asdf-format/asdf-time-schemas/issues'
'documentation' = 'https://asdf-time-schemas.readthedocs.io/en/stable'
'repository' = 'https://github.com/asdf-format/asdf-time-schemas'

[project.entry-points]
'asdf.resource_mappings' = { asdf_time_schemas = 'asdf_time_schemas.integration:get_resource_mappings' }

[build-system]
requires = [
    "setuptools >=42",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/asdf_time_schemas/_version.py"

[tool.setuptools]
packages = ["asdf_time_schemas", "asdf_time_schemas.resources"]

[tool.setuptools.package-data]
"asdf_time_schemas.resources" = ["resources/**/*.yaml"]

[tool.setuptools.package-dir]
'' = "src"
"asdf_time_schemas.resources" = "resources"

[tool.pytest.ini_options]
asdf_schema_root = 'resources/stsci.edu/schemas'
asdf_schema_tests_enabled = 'true'
asdf_schema_ignore_unrecognized_tag = 'true'
testpaths = """
    tests
    resources
"""
addopts = '--color=yes'

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
